skeleton build framework
git-svn-id: svn://afterclap.com/pito/trunk@4 10163329-09b4-48c1-bceb-0bacdf617a99

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,14 @@
 cmake_minimum_required(VERSION 2.6)
+set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules)
 set(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS true)
 
 project(pito)
 
+set(CONFIG_DIR_SUFFIX /pito)
+set(SHARE_DIR_SUFFIX ${CONFIG_DIR_SUFFIX})
+include(Installer)
+configure_file(${CMAKE_SOURCE_DIR}/config.hpp.cmake ${CMAKE_BINARY_DIR}/config.hpp)
 
+include_directories(${CMAKE_BINARY_DIR})
+
+add_subdirectory(interceptor)
