link flags innit
git-svn-id: svn://afterclap.com/pito/trunk@8 10163329-09b4-48c1-bceb-0bacdf617a99

--- a/src/interceptor/CMakeLists.txt
+++ b/src/interceptor/CMakeLists.txt
@@ -1,3 +1,8 @@
 set(INTERCEPTOR_NAME pito_interceptor)
+
 add_library(${INTERCEPTOR_NAME} SHARED system_calls.c)
+
+# TODO: check gcc
+set_target_properties(${INTERCEPTOR_NAME} PROPERTIES LINK_FLAGS -nostdlib)
+
 install_targets(/lib ${INTERCEPTOR_NAME})
