maybe converting to C++ will work who knows
git-svn-id: svn://afterclap.com/pito/trunk@9 10163329-09b4-48c1-bceb-0bacdf617a99

--- a/src/interceptor/CMakeLists.txt
+++ b/src/interceptor/CMakeLists.txt
@@ -1,6 +1,9 @@
 set(INTERCEPTOR_NAME pito_interceptor)
 
-add_library(${INTERCEPTOR_NAME} SHARED system_calls.c)
+add_library(${INTERCEPTOR_NAME} SHARED system_calls.cpp)
+
+#target_link_libraries(${INTERCEPTOR_NAME} /usr/lib/gcc/i686-pc-linux-gnu/4.3.2/libstdc++.a)
+# target_link_libraries(${INTERCEPTOR_NAME} gcc_s)
 
 # TODO: check gcc
 set_target_properties(${INTERCEPTOR_NAME} PROPERTIES LINK_FLAGS -nostdlib)
