--- a/src/pito/interceptor/CMakeLists.txt
+++ b/src/pito/interceptor/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(INTERCEPTOR_NAME pito_interceptor)
 
 add_library(${INTERCEPTOR_NAME} SHARED system_calls.cpp)
-target_link_libraries(${INTERCEPTOR_NAME} dl)
+target_link_libraries(${INTERCEPTOR_NAME} dl stdc++)
 set_target_properties(${INTERCEPTOR_NAME} PROPERTIES LINK_FLAGS -nostdlib)
 install_targets(/lib ${INTERCEPTOR_NAME})
