libpito log seems about ready
git-svn-id: svn://afterclap.com/pito/trunk@30 10163329-09b4-48c1-bceb-0bacdf617a99

--- a/src/pito/interceptor/CMakeLists.txt
+++ b/src/pito/interceptor/CMakeLists.txt
@@ -1,5 +1,1 @@
-set(INTERCEPTOR_NAME pito_interceptor)
-
-add_library(${INTERCEPTOR_NAME} SHARED system_calls.cpp)
-target_link_libraries(${INTERCEPTOR_NAME} dl)
-install_targets(/lib ${INTERCEPTOR_NAME})
+add_subdirectory(log)
