--- a/src/pito/interceptor/CMakeLists.txt
+++ b/src/pito/interceptor/CMakeLists.txt
@@ -1,1 +1,6 @@
+# TODO: 
+# check for mac which needs:
+#    DYLD_FORCE_FLAT_NAMESPACE=YES
+#    DYLD_INSERT_LIBRARIES=../obj/interceptor/log/libpito_log.dylib
+# check for off64_t
 add_subdirectory(log)
