pito goes where it goes man
git-svn-id: svn://afterclap.com/pito/trunk@94 10163329-09b4-48c1-bceb-0bacdf617a99

--- a/src/pito/interceptor/CMakeLists.txt
+++ b/src/pito/interceptor/CMakeLists.txt
@@ -1,6 +1,4 @@
-# TODO: 
-# check for mac which needs:
-#    DYLD_FORCE_FLAT_NAMESPACE=YES
-#    DYLD_INSERT_LIBRARIES=../obj/interceptor/log/libpito_log.dylib
-# check for off64_t
 add_subdirectory(log)
+
+add_executable(pito pito.cpp)
+install_targets(/bin pito)
