--- a/src/pito/CMakeLists.txt
+++ b/src/pito/CMakeLists.txt
@@ -14,9 +14,9 @@ include(Installer)
 include(CheckTypeSize)
 check_type_size(__off64_t OFF64_SIZE)
 if(OFF64_SIZE)
-    set(OFF64_TYPE "__off64_t")
+    set(OFF64_TYPE __off64_t)
 else()
-    set(OFF64_TYPE "off_t")
+    set(OFF64_TYPE off_t)
 endif()
 set(PITO_APPLE ${APPLE})
 
