bugfix and clean up
git-svn-id: svn://afterclap.com/pito/trunk@146 10163329-09b4-48c1-bceb-0bacdf617a99

--- a/src/pito/CMakeLists.txt
+++ b/src/pito/CMakeLists.txt
@@ -30,4 +30,4 @@ add_subdirectory(interceptor)
 
 add_executable(pito pito.cpp config.hpp)
 install_targets(/bin pito)
-installDirectory(${CMAKE_SOURCE_DIR} ${INCLUDE_DIR} .hpp$)
+installDirectory(${CMAKE_SOURCE_DIR} ${INCLUDE_DIR}/pito .hpp$)
