added automated testing to cmake
git-svn-id: svn://afterclap.com/pito/trunk@160 10163329-09b4-48c1-bceb-0bacdf617a99

--- a/src/pito/test/CMakeLists.txt
+++ b/src/pito/test/CMakeLists.txt
@@ -1,3 +1,6 @@
-include(CTest)
+add_executable(break_jail break_jail.c)
 
-add_test(BreakJail break_jail.cpp)
+add_custom_target(
+    test
+    COMMAND LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/interceptor/log pito log ${CMAKE_CURRENT_BINARY_DIR}/break_jail
+    DEPENDS break_jail)
