gotta try adding multiple tests to the same target next
git-svn-id: svn://afterclap.com/pito/trunk@161 10163329-09b4-48c1-bceb-0bacdf617a99

--- a/src/pito/test/CMakeLists.txt
+++ b/src/pito/test/CMakeLists.txt
@@ -1,6 +1,9 @@
-add_executable(break_jail break_jail.c)
+macro(log_test _testName)
+    add_executable(${_testName} ${_testName}.c)
+    add_custom_target(
+        test
+        COMMAND LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/interceptor/log pito log ${CMAKE_CURRENT_BINARY_DIR}/${_testName}
+        DEPENDS ${_testName})
+endmacro()
 
-add_custom_target(
-    test
-    COMMAND LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/interceptor/log pito log ${CMAKE_CURRENT_BINARY_DIR}/break_jail
-    DEPENDS break_jail)
+log_test(break_jail)
