neaten up, more flexible
git-svn-id: svn://afterclap.com/pito/trunk@164 10163329-09b4-48c1-bceb-0bacdf617a99

--- a/src/pito/test/CMakeLists.txt
+++ b/src/pito/test/CMakeLists.txt
@@ -1,12 +1,13 @@
 add_custom_target(test)
-macro(log_test _testName)
+macro(pito_test _testType _testName)
     add_executable(${_testName} ${_testName}.c)
     add_custom_command(
         SOURCE test
         TARGET test
-        COMMAND LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/interceptor/log pito log ${CMAKE_CURRENT_BINARY_DIR}/${_testName}
+        COMMAND LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/interceptor/${_testType} 
+                pito ${_testType} ${CMAKE_CURRENT_BINARY_DIR}/${_testName}
         DEPENDS ${_testName})
 endmacro()
 
-log_test(break_jail)
-log_test(break_fs_jail)
+pito_test(log break_jail)
+pito_test(log break_fs_jail)
