get boost include location
git-svn-id: svn://afterclap.com/pito/trunk@165 10163329-09b4-48c1-bceb-0bacdf617a99

--- a/src/pito/CMakeLists.txt
+++ b/src/pito/CMakeLists.txt
@@ -23,7 +23,8 @@ configure_file(${CMAKE_SOURCE_DIR}/config.hpp.cmake ${CMAKE_SOURCE_DIR}/config.h
 # end configuration
 ################################################################################
 
-include_directories(${CMAKE_SOURCE_DIR}/..)
+find_package(Boost)
+include_directories(${Boost_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/..)
 
 add_subdirectory(interceptor)
 
