parent directory version of chilon if available (useful when pito is included as a submodule)

--- a/src/pito/CMakeLists.txt
+++ b/src/pito/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 2.6)
-set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/../chilon/cmake/modules)
+file(GLOB CHILON_DIR ../../../chilon ../chilon) 
+list(GET CHILON_DIR 0 CHILON_DIR)
+set(CMAKE_MODULE_PATH ${CHILON_DIR}/cmake/modules)
 set(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS true)
 project(pito)
 include(C++0x)
