pull chilon installer fix

--- a/src/pito/CMakeLists.txt
+++ b/src/pito/CMakeLists.txt
@@ -45,4 +45,4 @@ endif()
 
 add_executable(pito pito.cpp config.hpp)
 install_targets(/bin pito)
-installDirectory(${CMAKE_SOURCE_DIR}/.. ${INCLUDE_DIR} .hpp$)
+installDirectory(${CMAKE_SOURCE_DIR}/.. ${HEADER_DIR} .hpp$)
