--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/chilon"]
 	path = src/chilon
-	url = git://chilon.git.sourceforge.net/gitroot/chilon
+	url = git://github.com/tuxjay/chilon
