test args support, sandbox fopen style calls

--- a/src/pito/test/CMakeLists.txt
+++ b/src/pito/test/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_custom_target(test)
-macro(pito_test _testType _testName)
+macro(pito_test _testType _testName _testArgs)
     add_executable(${_testName} ${_testName}.c)
     add_custom_command(
         SOURCE test
@@ -8,8 +8,8 @@ macro(pito_test _testType _testName)
         rm -rf .tmp && mkdir .tmp && cd .tmp &&
         LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/plugin
                 ${CMAKE_BINARY_DIR}/pito ${_testType}
-                ${CMAKE_CURRENT_BINARY_DIR}/${_testName}
+                ${_testArgs} ${CMAKE_CURRENT_BINARY_DIR}/${_testName}
         DEPENDS ${_testName})
 endmacro()
 
-pito_test(sandbox break_sandbox)
+pito_test(sandbox break_sandbox "-b/")
