--- a/src/pito/test/CMakeLists.txt
+++ b/src/pito/test/CMakeLists.txt
@@ -5,7 +5,7 @@ macro(pito_test _testType _testName _testArgs)
         SOURCE test
         TARGET test
         COMMAND
-        rm -rf .tmp && mkdir .tmp && cd .tmp &&
+        rm -rf .tmp && mkdir .tmp && cd .tmp && touch existing &&
         LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/plugin
                 ${CMAKE_BINARY_DIR}/pito ${_testType}
                 ${_testArgs} ${CMAKE_CURRENT_BINARY_DIR}/${_testName}
