sandbox_call_(rename|link), cleanup, test -wwrite

--- a/src/pito/test/CMakeLists.txt
+++ b/src/pito/test/CMakeLists.txt
@@ -14,4 +14,4 @@ macro(pito_test _testType _testName _testArgs)
         DEPENDS ${_testName})
 endmacro()
 
-pito_test(sandbox break_sandbox "-b.")
+pito_test(sandbox break_sandbox "-b.;-wwrite")
